<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding"
        >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/instagramtitle">
                </ImageView>


                <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username_hint"
                    android:layout_marginTop="@dimen/bing_padding"
                    style="@style/edit_text_style"
                    >
                </EditText>
                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:layout_marginTop="@dimen/small_padding"
                    style="@style/edit_text_style"
                    >
                </EditText>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    style="@style/loginButton"
                    android:text="@string/login_button"
                    >
                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:text="@string/login_forgot_password"
                    style="@style/forgotPasswordTextView">
                </TextView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:src="@drawable/barra_divisora">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_login"
                    android:layout_marginTop="@dimen/small_padding"
                    style="@style/facebookLoginTextView"
                    >
                </TextView>


    </LinearLayout>

<!--
  <view
      android:layout_width="match_parent"
      android:layout_height="1dp"
      app:layout_constraintBottom_toTopOf="@+id/txtSignUp"
      android:layout_marginBottom="@dimen/small_padding"
      >
  </view>
-->

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/small_padding"
        style="@style/signUoTextView"
        >
    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>